[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucore-ai"
version = "1.1.5"
description = "Lightweight library for command/control/optimization/automation of smart home devices using LLMs"
readme = "README.md"
license = "MIT"
authors = [
 { name="Michel Kohanim", email="michel@universal-devices.com" },
 { name="P.A. SCHEMBRI", email="pa.schembri@advanced-stack.com" }
]
dependencies = [
"aiohttp>=3.8.0",
"nucore_holiday_provider>=1.0.0"
]
urls = { "Homepage" = "https://github.com/NuCoreAI/hebcal_provider" }

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["assistant", "prompts", "config", "rag", "nucore", "server", "iox" ]
