[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucore_hebcal_provider"
version = "1.0.0"
description = "Hebrew Calendar Provider for NuCore"
readme = "README.md"
license = "MIT"
authors = [
 { name="Michel Kohanim", email="michel@universal-devices.com" }
]
dependencies = [
"aiohttp>=3.8.0",
"nucore_holiday_provider>=1.0.0"
]
urls = { "Homepage" = "https://github.com/NuCoreAI/hebcal_provider" }

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["hebcal"  ]
